--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,20 @@
         width: 280px;
         height: 100%;
         background-color: blue;
-        z-index: 1;
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
       }
       .container{
         display: flex;
         width: 100%;
-        height: 100%;
+        height: auto;
       }
       .main{
         background-color: rebeccapurple;
-        width: 100%;
+        width: auto;
+        height: 100%;
+        overflow: hidden;
       }
 
     </style>
