--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,9 @@
           <div> <br></div>
         </aside>
         <main class="main">
+          <div class="emoji mb-6">💣🤯💥</div>
+          <button class="button">Boom?</button>
         </main>
-
-
       </div>
   </body>
 </html>
